blocks/popup/popup.css
.popup {
    font-family: "inter", Arial, sans-serif;
    position: fixed;
    justify-content: center;
    align-items: center;
    width: 100%;
    min-height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    overflow: hidden;
    z-index: 100;
    left: 0;
    right: 0;
    bottom: 0;
    top: 0;
    opacity: 0;
    visibility: hidden;
    transition: visibility 0s, opacity 0.5s linear;
}

